--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.17",
+    "@tanstack/react-query": "^5.35.5",
+    "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
@@ -26,6 +31,7 @@
     "swiper": "^10.0.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.32.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
