--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
