--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
+    "ka-table": "^9.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
