--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.3",
     "swiper": "^10.0.0"
   },
   "devDependencies": {
